syntax = "proto3";
package discoverypb;

option go_package = "github.com/nathanieltornow/ostracon/discovery/discoverypb";

service Discovery {
  rpc Discover(Empty) returns (ColorShards);
  rpc RegisterShard(Shard) returns (Empty);
}

message Shard {
  string IpAddr = 1;

}

message ColorShards {
  int64 Color = 1;
  repeated string IpAddr = 2;

}

message Empty {}
